[package]
name = "blockgrave"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.27"
ratatui = "0.26"
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"
nanoid = "0.4"
blake3 = "1"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
